--- a/desktop.html
+++ b/desktop.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <link rel="stylesheet/less" type="text/css" href="css/bottom.less" />
+    <!-- <link rel="stylesheet/less" type="text/css" href="css/bottom.less" />
     <link rel="stylesheet/less" type="text/css" href="css/modal.less" />
-    <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="css/bottom.css" />
-    <link rel="stylesheet" type="text/css" href="css/modal.css" /> -->
+    <script src="js/less@4.1.1"></script> -->
+    <link rel="stylesheet" type="text/css" href="css/bottom.css" />
+    <link rel="stylesheet" type="text/css" href="css/modal.css" />
   </head>
   <body>
     <div class="page flex-col">
@@ -69,7 +69,7 @@
       </div>
       <div class="block_3 flex-col" id="part_2">
         <div class="pure-menu-box flex-row" id="pure-menu">
-          <div class="block_4 flex-col" id="pure-menu-tag"></div>
+          <!-- <div class="block_4 flex-col" id="pure-menu-tag"></div> -->
           <div class="text-wrapper_77 flex-col justify-between">
             <span class="text_16" id="menu-text_13" data-id="1" onclick="scrollToSection('text_13')"
               >Leading the Way in Eco-Innovation</span
@@ -91,7 +91,7 @@
           <div class="block_49 flex-row">
             <div class="group_95 flex-col">
               <div class="text-wrapper_7">
-                <span class="text_20">INDUSTRY’S FIRS</span>
+                <span class="text_20">INDUSTRY’S FIRST</span>
                 <span class="text_21"></span>
               </div>
               <div class="text-wrapper_8">
@@ -191,7 +191,7 @@
               </div>
               <div class="img-slide-item flex-col img-slide-item-05" style="z-index: 1; top: 65px;left: -2px;transform: scale(0.9);">
                 <div class="img-slide-item-box img-slide-item-box-5">
-                    <div class="">
+                    <div class="box-content">
                       <div class="img-slide-item-box-5-title">
                         Compared to conventional e-cigarettes, every 100 ECO NANO SOLAR devices result in:
                       </div>
@@ -202,17 +202,19 @@
                           <span>Reduction in Energy Consumption</span>
                         </div>
                       </div>
+                      <div class="line"></div>
                       <div class="img-slide-item-box-5-text-wrapper">
-                        <img width="56" src="image/03-5-icon 1@2x.svg" alt="">
+                        <img width="56" src="image/03-5-icon 2@2x.svg" alt="">
                         <div class="flex-col">
                           <span>1000kg</span>
                           <span>CO₂ Reduction</span>
                         </div>
                       </div>
+                      <div class="line"></div>
                       <div class="img-slide-item-box-5-text-wrapper">
-                        <img width="56" src="image/03-5-icon 1@2x.svg" alt="">
+                        <img width="56" src="image/03-5-icon 3@2x.svg" alt="">
                         <div class="flex-col">
-                          <span>75%%</span>
+                          <span>75%</span>
                           <span>Product Recycling Rate</span>
                         </div>
                       </div>
@@ -241,13 +243,13 @@
        
         <div id="product-box-end" class="text-wrapper_83 flex-row">
           <span class="text_45"
-            >Pioneering innovative concepts in sustainable energy, VAPORESSO is leading the industry into a new era of eco-friendly efficiency through meaningful action.</span
+            >Pioneering eco-friendly product innovation, VAPORESSO is leading the Industry into a new era of sustainable energy solutions.</span
           >
         </div>
       </div>
       <div id="text_14" class="group_97 flex-col">
         <!-- <span class="paragraph_31 fontRepair fontBold">Inspiring Waves of<br />Sustainable Action</span> -->
-        <span class="paragraph_31 fontRepair fontBold">ACTION POWER <br />FOR SOCIETY</span>
+        <span class="paragraph_31 fontRepair fontBold">Inspiring Waves <br />of Sustainable Action</span>
         <div class="section_22 flex-col"></div>
         <div class="text-wrapper_85 flex-row justify-between">
           <span class="text_315">Pure Power Action</span>
@@ -509,7 +511,7 @@
                   <span class="text_332">updated weekly)</span>
                 </div>
                 <span class="text_333 fontRepair fontBold">1500</span>
-                <span class="text_334 fontRepair">1 Sale = 1000 Green Energy</span>
+                <span class="text_334 fontRepair">1 Sale = 1000 Pure Power</span>
                 <div class="text-wrapper_89 flex-col">
                   <span class="text_335">Shop Now</span>
                 </div>
@@ -537,7 +539,6 @@
                   <span class="text_341">(updated weekly)</span>
                 </div>
                 <span class="text_342 fontRepair fontBold">1500</span>
-                <span class="text_343 fontRepair">1 Post = 1000 Green Energy</span>
                 <span class="text_344 fontRepair"
                   >1 Post = 1000 Pure Power <br>
                   1 Interaction = 100 Pure Power</span
@@ -734,10 +735,10 @@
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollToPlugin.min.js"></script>
+    <script src="js/axios.min.js"></script>
+    <script src="js/gsap.min.js"></script>
+    <script src="js/ScrollTrigger.min.js"></script>
+    <script src="js/ScrollToPlugin.min.js"></script>
     <script src="api/index.js"></script>
     <script src="js/index.js"></script>
     <script src="js/bottom.js"></script>
