--- a/desktop.html
+++ b/desktop.html
@@ -285,7 +285,7 @@
             >
             <div id="progress-track" class="group_16 flex-col">
               <div id="progress-bar" class="text-wrapper_18 flex-col">
-                <span class="text_55" id="current-progress">0</span>
+                <span class="text_55" id="current-progress"></span>
               </div>
             </div>
             <div class="text-wrapper_86 flex-row">
@@ -386,9 +386,9 @@
                         <div class="discountCodeText">
                           <span id="textToCopy">XXXXXXXXXXXX</span>  
                           <img onclick="copyText()" src="image/modal/copy.png" alt=""></div>
-                        <div class="discountCodeDescribe" style="display: none;">Your discount code has been successfully sent.</div>
+                        <div class="discountCodeDescribe" >Your discount code has been successfully sent.</div>
                       </div>
-                      <a href="https://store.vaporesso.com/pages/vaporesso-bfcm" target="_blank" class="shopNow">Shop Now</a>
+                      <a href="https://store.vaporesso.com/pages/pure-power-for-all" target="_blank" class="shopNow">Shop Now</a>
                     </div>
                     
                   </div>
@@ -510,9 +510,9 @@
                 </div>
                 <span class="text_333 fontRepair fontBold">1500</span>
                 <span class="text_334 fontRepair">1 Sale = 1000 Green Energy</span>
-                <div class="text-wrapper_89 flex-col">
+                <a href="https://store.vaporesso.com/pages/pure-power-for-all" target="_blank" class="text-wrapper_89 flex-col">
                   <span class="text_335">Shop Now</span>
-                </div>
+                </a>
               </div>
               <div class="section_26 flex-col">
                 <div class="section_27 flex-col"></div>
@@ -542,9 +542,9 @@
                   >1 Post = 1000 Pure Power <br>
                   1 Interaction = 100 Pure Power</span
                 >
-                <div class="text-wrapper_91 flex-col">
+                <a href="https://community.vaporesso.com/t/topic/1230" target="_blank" class="text-wrapper_91 flex-col">
                   <span class="text_345">Join the Conversation</span>
-                </div>
+                </a>
               </div>
               <div class="group_101 flex-col">
                 <div class="group_102 flex-col"></div>
@@ -738,7 +738,8 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollToPlugin.min.js"></script>
-    <script src="api/index.js"></script>
+    <script src="https://www.vaporesso.com/hubfs/js/2024/pure_power/api_2/index.js"></script>
+    <!-- <script async src="js/request.js"></script> -->
     <script src="js/index.js"></script>
     <script src="js/bottom.js"></script>
     <script src="js/animate.js"></script>
