--- a/desktop.html
+++ b/desktop.html
@@ -386,7 +386,7 @@
                     <div class="discountCodeInfo-box" style="display: none;">
                       <div class="discountCodeInfo">
                         <div class="discountCodeText">
-                          <span id="textToCopy">VPCARE20</span>  
+                          <span id="textToCopy"></span>  
                           <img onclick="copyText()" src="image/modal/copy.png" alt=""></div>
                         <div class="discountCodeDescribe" >Your discount code has been successfully sent.</div>
                       </div>
