--- a/desktop.html
+++ b/desktop.html
@@ -58,7 +58,7 @@
             >Inspiring Waves of Sustainable Action</span
           >
           <span class="text_15" onclick="scrollToSection('text_15')"
-            >Paving the Path Towards a Brighter Tomorrow</span
+            >Paving the Path Towards A Brighter Tomorrow</span
           >
         </div>
         <!-- <img
@@ -79,7 +79,7 @@
               </span
             >
             <span class="text_18" id="menu-text_15" data-id="3" onclick="scrollToSection('text_15')"
-              >Paving the Path Towards a Brighter Tomorrow
+              >Paving the Path Towards A Brighter Tomorrow
               </span
             >
           </div>
@@ -256,7 +256,7 @@
           <span class="text_316"
             >Generating Pure Power,
             Empowering Real Changes
-            on a Global Scale</span
+            on A Global Scale</span
           >
         </div>
         <span class="text_317"
@@ -273,7 +273,7 @@
         <div class="block_60 flex-col justify-between">
           <div class="text-group_72 flex-col">
             <span class="text_51"
-              >Your Action Makes <br> a Great Impact </span
+              >Your Action Makes <br> A Great Impact </span
             >
             <span class="text_52"
               >Now is the time to join the movement! Every action you take generates Pure Power, driving the momentum for Pure Power Action. Your incredible support can accelerate its global impact, bringing us closer to a sustainable future. Together, let’s turn small, meaningful steps into powerful actions! 
@@ -491,9 +491,11 @@
                 <div class="box_85 flex-col"></div>
                 <div class="text-group_75 flex-col">
                   <span class="text_321">Empowering</span>
-                  <span class="text_322">Show your support and win exciting rewards!</span>
+                  <span class="text_322">To Spark Meaningful Changes</span>
                   <span class="paragraph_32"
-                    >Cast your vote and win exciting rewards!<br />Join us in creating a cleaner future and be part of a movement that makes a real difference—while earning exciting rewards along the way!</span
+                    >Show your support and win exciting rewards!
+                    <br />Join us in creating a cleaner future and be part of a movement that makes a real difference—while earning exciting rewards along the way!
+                    </span
                   >
                 </div>
               </div>
