--- a/desktop.html
+++ b/desktop.html
@@ -600,7 +600,7 @@
       <div id="text_15" class="block_21 flex-col">
         <div class="text-group_81 flex-col justify-between">
           <!-- <span class="paragraph_5">Paving the Path Towards <br />A Brighter Tomorrow</span> -->
-          <span class="paragraph_5">PAVING THE RATH <br> TOWARDS A BRIGHTHER <br /> TOMORROW</span>
+          <span class="paragraph_5">PAVING THE RATH <br> TOWARDS A BRIGHTER <br /> TOMORROW</span>
           <span class="text_93"
             >VAPORESSO is proud to champion a more sustainable way of life. Join us by signing the Pure Living Proposal— a shared commitment to shaping a brighter, greener tomorrow. Let’s start making eco-conscious choices part of our everyday lives and inspiring others to follow. Together, making green living a part of everyday life and building a future where green is the new norm.
             </span
