--- a/desktop.html
+++ b/desktop.html
@@ -138,7 +138,7 @@
               >Pioneering a Sustainable Vision with Determination</span
             >
             <span class="text_304"
-              >Redefining the industry's understanding of clean energy, ECO NANO SOLAR is setting a bold precedent for eco-friendly innovation. A breakthrough not only marks a major improvement in product development, but this is also a daring step for the industry's sustainable practices, exploring new paths for renewable power sources.</span
+              >Redefining the industry's understanding of clean energy, ECO NANO SOLAR is setting a bold precedent for eco-friendly innovation. A breakthrough not only marks a major improvement in product development, but is also a daring step for the industry's sustainable practices, exploring new paths for renewable power sources.</span
             >
           </div>
         </div>
