--- a/desktop.html
+++ b/desktop.html
@@ -383,7 +383,11 @@
                       <div class="tip err-tip">Invalid email</div>
                       <div class="tip success-tip">Your prize information has been successfully recorded.</div>
                     </div>
-                    <div class="discountCodeInfo-box" style="display: none;">
+                  </div>
+                  <div class="discountCodeInfo-box" style="display: none;">
+                    <div class="title">Excellent！</div>
+                    <div class="describe">Your 20% off discount code is here! Don’t forget to save it and use it at checkout to explore the fantastic world of vaping.</div>
+                    <div>
                       <div class="discountCodeInfo">
                         <div class="discountCodeText">
                           <span id="textToCopy"></span>  
@@ -392,7 +396,6 @@
                       </div>
                       <a href="https://store.vaporesso.com/pages/pure-power-for-all" target="_blank" class="shopNow">Shop Now</a>
                     </div>
-                    
                   </div>
                 </div>
               </div>
@@ -431,7 +434,7 @@
                     <div class="describe">You've claimed your exclusive reward — a Osmo Action 5 pro! Please leave a valid email. We’ll contact you via email after the event ends to arrange the delivery. </div>
                     <div class="input-group">
                       <input type="email" placeholder="Enter your email" class="email-input">
-                      <button onclick="submitEmail('.drone1')" class="confirm-btn">Confirm</button>
+                      <button onclick="submitEmail('.drone2')" class="confirm-btn">Confirm</button>
                       <div class="tip err-tip">Invalid email</div>
                       <div class="tip success-tip">Your prize information has been successfully recorded.</div>
                     </div>
@@ -445,7 +448,7 @@
                   <div>
                     <div class="title">Congratulations！</div>
                     <div class="describe">You've claimed your exclusive reward — a DJI NEO! Please leave a valid email. We’ll contact you via email after the event ends to arrange the delivery. </div>
-                    <div class="input-group" onclick="submitEmail('.drone1')">
+                    <div class="input-group" onclick="submitEmail('.drone3')">
                       <input type="email" placeholder="Enter your email" class="email-input">
                       <button class="confirm-btn">Confirm</button>
                       <div class="tip err-tip">Invalid email</div>
