feat: 代码冲突修改

--- a/desktop.html
+++ b/desktop.html
@@ -230,7 +230,7 @@
         <section class="video-section">
           <div class="video-layout">
             <div class="video-wrapper">
-              <div class="video-box">
+              <div class="page-video-box">
                 <video id="video-bg" preload loop muted src="image/video01.mp4" ></video>
               </div>
               <span class="text_43"
